# tools

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  builder.sh  launch.vs.json  vcpkg.json
core/: CMakeLists.txt  README.md
core/include/core/network/: TcpClient.h  TcpCommunicator.h  TcpConnection.h  TcpServer.h
core/include/core/patterns/: Callback.h  Observer.h  Singleton.h
core/include/core/utils/: Crypto.h  Dirs.h  File.h  FmtExt.h  Log.h  LogCapture.h  LogInterceptor.h  Number.h  SingleInstanceChecker.h  StopWatch.h  Str.h  Stream.h  Sys.h  Throw.h  Tracer.h
core/src/: CMakeLists.txt
core/src/network/: TcpClient.cpp  TcpCommunicator.cpp  TcpConnection.cpp  TcpServer.cpp
core/src/network/data/: Packer.cpp  StringSource.cpp  Unpacker.cpp
core/src/patterns/: Callback.h  Observer.h  Singleton.h
core/src/utils/: Crypto.cpp  Crypto.h  Dirs.cpp  File.cpp  FileDetail.h  FmtExt.h  Log.cpp  SingleInstanceChecker.cpp  StopWatch.cpp  Str.cpp  Str.h  Sys.cpp  Throw.cpp  Tracer.cpp
core/src/utils/os/: DirsLinux.cpp  DirsMacOS.cpp  DirsPosix.cpp  DirsWin32.cpp  SysLinux.cpp  SysMacOS.cpp  SysPosix.cpp  SysWin32.cpp
core/test/: CMakeLists.txt
core/test/network/: TcpClientTest.cpp  TcpCommunicatorTest.cpp  TcpConnectionTest.cpp  TcpServerTest.cpp
core/test/network/data/: PackerTest.cpp  UnpackerTest.cpp
core/test/patterns/: CallbackTest.cpp  ObserverTest.cpp
core/test/utils/: CryptoTest.cpp  DirsTest.cpp  FileTest.cpp  FmtExtTest.cpp  LogTest.cpp  NumberTest.cpp  StopWatchTest.cpp  StrTest.cpp  SysTest.cpp  ThrowTest.cpp  TracerTest.cpp
duplicates/: CMakeLists.txt  README.md  dups.toml  improvements.txt
duplicates/include/duplicates/: CmdLine.h  Config.h  DuplicateDeletion.h  DuplicateDetector.h  DuplicateOperation.h  Menu.h  Node.h  Progress.h  Utils.h
duplicates/src/: CMakeLists.txt  CmdLine.cpp  Config.cpp  DeletionStrategy.cpp  DuplicateDeletion.cpp  DuplicateDetector.cpp  DuplicateDetector.h  DuplicateOperation.cpp  Duplicates.cpp  Main.cpp  Menu.cpp  Node.cpp  Node.h  PathList.cpp  StopWatch.cpp  StopWatch.h  Utils.cpp  Utils.h
duplicates/test/: CMakeLists.txt  CmdLineTest.cpp  ConfigTest.cpp  DeletionStrategyTest.cpp  DuplicateDeletionTest.cpp  DuplicateDetectorTest.cpp  MenuTest.cpp  NodeTest.cpp  UtilsTest.cpp
kidmon/: CMakeLists.txt  README.md  Todo.md
kidmon-reports/: CMakeLists.txt  README.md
kidmon-reports/src/: CMakeLists.txt  Main.cpp
kidmon-reports/src/aggregate/: Aggregate.h  Predicate.h
kidmon-reports/src/condition/: Conditions.cpp  Conditions.h  ICondition.h
kidmon-reports/src/transform/: ITransform.h  Transforms.cpp  Transforms.h
kidmon/doc/kidmon/: Docs.md  Todo.md
kidmon/include/kidmon/: KidmonAgent.h  KidmonServer.h
kidmon/include/kidmon/agent/: KidmonAgent.h
kidmon/include/kidmon/common/: Console.h  Enums.h  Runnable.h  Service.h  Utils.h
kidmon/include/kidmon/config/: Config.h
kidmon/include/kidmon/data/: Helpers.h  Messages.h  Types.h
kidmon/include/kidmon/geometry/: Dimensions.h  Point.h  Rect.h
kidmon/include/kidmon/os/: Api.h  ProcessLauncher.h  Window.h
kidmon/include/kidmon/repo/: FileSystemRepository.h  Filter.h  Repository.h
kidmon/include/kidmon/server/: AgentConnection.h  AgentManager.h  KidmonServer.h
kidmon/scripts/: install-kidmon-macos.sh  uninstall-kidmon-macos.sh
kidmon/src/: CMakeLists.txt  Constants.h  KidMon.cpp  KidMon.h  KidmonAgent.cpp  KidmonServer.cpp  KidmonService.cpp  KidmonService.h  Main.cpp
kidmon/src/agent/: KidmonAgent.cpp
kidmon/src/common/: Console.cpp  Console.h  Enums.cpp  Enums.h  FmtExt.h  Service.cpp  Service.h  Singleton.h  Tracer.cpp  Tracer.h  Utils.cpp  Utils.h
kidmon/src/config/: Config.cpp  Config.h
kidmon/src/data/: Messages.cpp  Types.cpp
kidmon/src/geometry/: Dimensions.h  Point.h  Rect.h
kidmon/src/network/: TcpClient.cpp  TcpClient.h  TcpCommunicator.cpp  TcpCommunicator.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
kidmon/src/network/data/: StringSource.h  Unpacker.cpp  Unpacker.h
kidmon/src/os/: Api.h  Window.h
kidmon/src/os/linux/: Api.cpp  Api.h  ProcessLauncher.cpp  ProcessLauncher.h  Window.cpp  Window.h
kidmon/src/os/mac/: Api.cpp  CoreGraphicsUtils.cpp  CoreGraphicsUtils.h  ProcessLauncher.cpp  Service.cpp  Window.cpp  Window.h
kidmon/src/os/win/: Api.cpp  Api.h  (+6 more)
kidmon/src/repo/: FileSystemRepository.cpp
kidmon/src/server/: AgentConnection.cpp  AgentManager.cpp  KidmonServer.cpp
kidmon/test/: CMakeLists.txt  TracerTest.cpp
kidmon/test/common/: TracerTest.cpp  UtilsTest.cpp
kidmon/test/network/: TcpClientTest.cpp  TcpConnectionTest.cpp  TcpServerTest.cpp
kidmon/test/repo/: FileSystemRepositoryTest.cpp
src/core/: CMakeLists.txt
src/core/network/: TcpClient.cpp  TcpCommunicator.cpp  TcpConnection.cpp  TcpServer.cpp
src/core/utils/: Crypto.cpp  Dirs.cpp  File.cpp  Log.cpp  Number.cpp  SingleInstanceChecker.cpp  Str.cpp  Sys.cpp  Tracer.cpp
src/duplicates/: CMakeLists.txt  CmdLine.cpp  Config.cpp  DeletionStrategy.cpp  DuplicateDeletion.cpp  DuplicateDetector.cpp  DuplicateOperation.cpp  FileList.cpp  Main.cpp  Menu.cpp  Node.cpp  PathList.cpp  Utils.cpp  dups.toml  improvements.txt
src/kidmon/: CMakeLists.txt  Main.cpp
src/kidmon-reports/: CMakeLists.txt  Main.cpp
src/kidmon-reports/aggregate/: Aggregate.h
src/kidmon-reports/condition/: Conditions.cpp
src/kidmon-reports/transform/: Transforms.cpp
src/kidmon/agent/: KidmonAgent.cpp
src/kidmon/common/: Console.cpp  Enums.cpp  Service.cpp  Tracer.cpp  Utils.cpp
src/kidmon/config/: Config.cpp
src/kidmon/data/: Types.cpp
src/kidmon/repo/: FileSystemRepository.cpp
src/kidmon/server/: AgentConnection.cpp  KidmonServer.cpp
test/core/: CMakeLists.txt
test/core/network/: TcpCommunicatorTest.cpp  TcpConnectionTest.cpp
test/core/patterns/: CallbackTest.cpp
test/core/utils/: CryptoTest.cpp  FileTest.cpp  FmtExtTest.cpp  NumberTest.cpp  StrTest.cpp  SysTest.cpp
test/kidmon/: CMakeLists.txt
test/kidmon/repo/: FileSystemRepositoryTest.cpp
(+98 files in other folders)
